# goavx-cgo

./: .gitignore  CMakeLists.txt  README.md  config.in.h
include/goavx/: goavx.h
include/goavx/av/: codec.h  format.h  packet.h  util.h
include/goavx/common/: utils.h
include/goavx/cv/: core.h  highgui.h  imgcodecs.h  imgproc.h  videoio.h
src/: CMakeLists.txt
src/av/: CMakeLists.txt  codec.cpp  codec.h  format.cpp  format.h  packet.cpp  packet.h  util.cpp  util.h
src/common/: utils.cpp  utils.h
src/cv/: CMakeLists.txt  core.cpp  core.h  highgui.cpp  highgui.h  imgcodecs.cpp  imgproc.cpp  version.cpp  version.h  videoio.cpp  videoio.h
tests/: CMakeLists.txt  ffmpeg_test.cpp  opencv_test.cpp
